# comfcpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
build-config/: port-specializations.cmake
build-config/cmake/: install-config.cmake  python.cmake  tests.cmake  tools.cmake  utils.cmake
build-config/cmake/vcpkg/: vcpkg-utilities.cmake
build-config/ports/boost-hana/: portfile.cmake  vcpkg.json
build-config/ports/comf/: portfile.cmake  usage  vcpkg.json
build-config/ports/comf-test/: portfile.cmake  vcpkg.json
build-config/ports/glaze/: portfile.cmake  vcpkg.json
build-config/ports/value-types/: portfile.cmake  vcpkg.json
build-config/ports/ztd-text/: portfile.cmake  vcpkg.json
build-config/toolchains/: bootstrap.cmake  clang.cmake  clangcl.cmake
build-config/triplets/: arm64-clangcl-dynamic.cmake  arm64-clangcl-static.cmake  arm64-clangcl-uwp.cmake  x64-clangcl-dynamic.cmake  x64-clangcl-scarlett-static.cmake  x64-clangcl-scarlett.cmake  x64-clangcl-static.cmake  x64-clangcl-uwp.cmake  x64-clangcl-xboxone-static.cmake  x64-clangcl-xboxone.cmake  x64-windows-clang.cmake
src/comf/: CMakeLists.txt
src/comf/detail/comf/private/: _assert.cpp  _assert.h  _constants.h  _experimental_std.h  _hana.h  _value_types.h
src/comf/detail/private/: _assert.h  _hana.h
src/comf/include/comf/: assert.h  concepts.h  constants.h  embed.h  error.h  func.h  logger.h  mixins.h  string.h
src/comf/include/comf/test/: test_utils.h
src/comf/include/comf/util/: block.h  json.h  misc.h
src/comf/src/: assert.cpp  core.cpp  logger.cpp  string.cpp
src/comf/src/util/: json.cpp
src/comf/tests/: core_test.cpp
src/comf/tests/include/tests/: test_utils.h
